# metabox-poc

./: .gitignore  CMakeLists.txt  debug.bat  metabox-surfaces-poc.sln  release.bat
assets/graphics/: 3grid.ai  block.ai
assets/shaders/: meta_box.frag  meta_door.frag  test.frag  test.vert
glew/: .gitignore
metabox/: Box.cpp  Box.h  Entity.cpp  Entity.h  Player.h  View.h  game.cpp  game.h  main.cpp  metabox-surfaces-poc.vcxproj  metabox-surfaces-poc.vcxproj.filters  settings.h  vec2f.h
metabox-surfaces-poc/: Box.cpp  Box.h  Entity.cpp  Entity.h  Player.cpp  Player.h  View.h  game.cpp  game.h  main.cpp  meta_box.frag  meta_box.vert  meta_door.frag  metabox-surfaces-poc.vcxproj  metabox-surfaces-poc.vcxproj.filters  open_meta_door.frag  settings.h  vec2f.h
metabox-surfaces-poc/box2d/lib/: Box2D-d.lib  Box2D.lib
metabox-surfaces-poc/graphics/: 3grid.ai  7grid.ai  glass.ai
